# SydneyTrainSimulation

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
train/: train.cpp  train.h
